--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
+    "mongodb": "^3.0.2",
     "mongoose": "^4.12.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
